--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,15 @@
     "@emotion/styled": "^11.13.0",
     "@minchat/react-chat-ui": "^0.16.2",
     "@mui/material": "^6.1.1",
+    "@preline/strong-password": "^2.5.0",
+    "@preline/toggle-password": "^2.5.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -28,6 +31,7 @@
     "react-scripts": "5.0.1",
     "shadcn": "^1.0.0",
     "tailwind-merge": "^2.5.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
