--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,10 +1,9 @@
 {
-    "compilerOptions": {
-      
-      "baseUrl": "./src",
-      "paths": {
-        "@/*": ["./*"]
-      }
+  "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./*"]
     }
-  }
-  
+  },
+  "include": ["src/**/*"]
+}
