--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.1",
     "@minchat/react-chat-ui": "^0.16.2",
     "@mui/material": "^6.1.1",
     "@preline/strong-password": "^2.5.0",
     "@preline/toggle-password": "^2.5.0",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -27,13 +29,15 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-google-button": "^0.8.0",
+    "react-hook-form": "^7.54.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "shadcn": "^1.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.24.1"
   },
   "scripts": {
     "start": "react-scripts start",
