--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.54.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.0",
     "shadcn": "^1.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar-hide": "^1.1.7",
