--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.439.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dnd": "^16.0.1",
