--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.15.0",
     "shadcn": "^1.0.0",
+    "survey-react-ui": "^1.12.18",
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
